# alertlidemo

./: README.md  poem.txt  pyproject.toml
src/alertliflow1/: main.py
src/alertliflow1/crews/alertli_crew/: alertli_crew.py
src/alertliflow1/crews/alertli_crew/config/: agents.yaml
src/alertliflow1/crews/poem_crew/: poem_crew.py
