[project]
name = "alertliflow1"
version = "0.1.0"
description = "alertliflow1 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai-tools>=0.37.0",
    "crewai[tools]>=0.102.0,<1.0.0",
    "docling>=2.26.0",
    "google-generativeai>=0.8.4",
]

[project.scripts]
kickoff = "alertliflow1.main:kickoff"
run_crew = "alertliflow1.main:kickoff"
plot = "alertliflow1.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
